TC Project (phase 1)/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> DECLARATION declaration
Rule 2     program -> DEFINITION definition
Rule 3     program -> DECLARATION declaration program
Rule 4     program -> DEFINITION definition program
Rule 5     types -> INT
Rule 6     types -> FLOATTYPE
Rule 7     types -> BOOL
Rule 8     types -> STRINGTYPE
Rule 9     declaration -> NAME LPAR dargument RPAR COLON types
Rule 10    declaration -> NAME LPAR dargument RPAR COLON VOID
Rule 11    declaration -> NAME LPAR RPAR COLON types
Rule 12    declaration -> NAME LPAR RPAR COLON VOID
Rule 13    definition -> NAME LPAR dargument RPAR COLON types block
Rule 14    definition -> NAME LPAR RPAR COLON types block
Rule 15    definition -> NAME LPAR RPAR COLON VOID block
Rule 16    definition -> NAME LPAR dargument RPAR COLON VOID block
Rule 17    dargument -> NAME COLON types
Rule 18    dargument -> NAME COLON types COMMA dargument
Rule 19    block -> LCURLY RCURLY
Rule 20    block -> LCURLY block_content RCURLY
Rule 21    block_content -> statement
Rule 22    block_content -> statement block_content
Rule 23    statement -> RETURN SEMICOLON
Rule 24    statement -> RETURN expression SEMICOLON
Rule 25    statement -> IF expression block
Rule 26    statement -> IF expression block ELSE block
Rule 27    statement -> WHILE expression block
Rule 28    statement -> NAME COLON types EQUALS expression SEMICOLON
Rule 29    statement -> NAME COLON types EQUALS QMARK STRING QMARK SEMICOLON
Rule 30    statement -> NAME EQUALS expression SEMICOLON
Rule 31    statement -> NAME EQUALS QMARK STRING QMARK SEMICOLON
Rule 32    statement -> expression
Rule 33    expression -> expression SUM expression
Rule 34    expression -> expression SUB expression
Rule 35    expression -> expression MULTIPLY expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression RESTOF expression
Rule 38    expression -> expression SAMEAS expression
Rule 39    expression -> expression NEQUAL expression
Rule 40    expression -> expression HEQUAL expression
Rule 41    expression -> expression LEQUAL expression
Rule 42    expression -> expression HIGHER expression
Rule 43    expression -> expression LOWER expression
Rule 44    expression -> expression AND expression
Rule 45    expression -> expression OR expression
Rule 46    expression -> TRUE
Rule 47    expression -> FALSE
Rule 48    expression -> DIFFER expression
Rule 49    expression -> NUMBER
Rule 50    expression -> FLOAT
Rule 51    expression -> STRING
Rule 52    expression -> NAME
Rule 53    expression -> NAME LBRACK expression RBRACK
Rule 54    expression -> NAME LPAR RPAR LBRACK expression RBRACK
Rule 55    expression -> NAME LPAR argument RPAR LBRACK expression RBRACK
Rule 56    expression -> NAME LPAR argument RPAR
Rule 57    argument -> expression
Rule 58    argument -> expression COMMA expression

Terminals, with rules where they appear

AND                  : 44
BOOL                 : 7
COLON                : 9 10 11 12 13 14 15 16 17 18 28 29
COMMA                : 18 58
DECLARATION          : 1 3
DEFINITION           : 2 4
DIFFER               : 48
DIVIDE               : 36
ELSE                 : 26
EQUALS               : 28 29 30 31
FALSE                : 47
FLOAT                : 50
FLOATTYPE            : 6
HEQUAL               : 40
HIGHER               : 42
IF                   : 25 26
INT                  : 5
LBRACK               : 53 54 55
LCURLY               : 19 20
LEQUAL               : 41
LOWER                : 43
LPAR                 : 9 10 11 12 13 14 15 16 54 55 56
MULTIPLY             : 35
NAME                 : 9 10 11 12 13 14 15 16 17 18 28 29 30 31 52 53 54 55 56
NEQUAL               : 39
NUMBER               : 49
OR                   : 45
QMARK                : 29 29 31 31
RBRACK               : 53 54 55
RCURLY               : 19 20
RESTOF               : 37
RETURN               : 23 24
RPAR                 : 9 10 11 12 13 14 15 16 54 55 56
SAMEAS               : 38
SEMICOLON            : 23 24 28 29 30 31
STRING               : 29 31 51
STRINGTYPE           : 8
SUB                  : 34
SUM                  : 33
TRUE                 : 46
VOID                 : 10 12 15 16
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

argument             : 55 56
block                : 13 14 15 16 25 26 26 27
block_content        : 20 22
dargument            : 9 10 13 16 18
declaration          : 1 3
definition           : 2 4
expression           : 24 25 26 27 28 30 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 48 53 54 55 57 58 58
program              : 3 4 0
statement            : 21 22
types                : 9 11 13 14 17 18 28 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . DECLARATION declaration
    (2) program -> . DEFINITION definition
    (3) program -> . DECLARATION declaration program
    (4) program -> . DEFINITION definition program

    DECLARATION     shift and go to state 2
    DEFINITION      shift and go to state 3

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> DECLARATION . declaration
    (3) program -> DECLARATION . declaration program
    (9) declaration -> . NAME LPAR dargument RPAR COLON types
    (10) declaration -> . NAME LPAR dargument RPAR COLON VOID
    (11) declaration -> . NAME LPAR RPAR COLON types
    (12) declaration -> . NAME LPAR RPAR COLON VOID

    NAME            shift and go to state 5

    declaration                    shift and go to state 4

state 3

    (2) program -> DEFINITION . definition
    (4) program -> DEFINITION . definition program
    (13) definition -> . NAME LPAR dargument RPAR COLON types block
    (14) definition -> . NAME LPAR RPAR COLON types block
    (15) definition -> . NAME LPAR RPAR COLON VOID block
    (16) definition -> . NAME LPAR dargument RPAR COLON VOID block

    NAME            shift and go to state 7

    definition                     shift and go to state 6

state 4

    (1) program -> DECLARATION declaration .
    (3) program -> DECLARATION declaration . program
    (1) program -> . DECLARATION declaration
    (2) program -> . DEFINITION definition
    (3) program -> . DECLARATION declaration program
    (4) program -> . DEFINITION definition program

    $end            reduce using rule 1 (program -> DECLARATION declaration .)
    DECLARATION     shift and go to state 2
    DEFINITION      shift and go to state 3

    program                        shift and go to state 8

state 5

    (9) declaration -> NAME . LPAR dargument RPAR COLON types
    (10) declaration -> NAME . LPAR dargument RPAR COLON VOID
    (11) declaration -> NAME . LPAR RPAR COLON types
    (12) declaration -> NAME . LPAR RPAR COLON VOID

    LPAR            shift and go to state 9


state 6

    (2) program -> DEFINITION definition .
    (4) program -> DEFINITION definition . program
    (1) program -> . DECLARATION declaration
    (2) program -> . DEFINITION definition
    (3) program -> . DECLARATION declaration program
    (4) program -> . DEFINITION definition program

    $end            reduce using rule 2 (program -> DEFINITION definition .)
    DECLARATION     shift and go to state 2
    DEFINITION      shift and go to state 3

    program                        shift and go to state 10

state 7

    (13) definition -> NAME . LPAR dargument RPAR COLON types block
    (14) definition -> NAME . LPAR RPAR COLON types block
    (15) definition -> NAME . LPAR RPAR COLON VOID block
    (16) definition -> NAME . LPAR dargument RPAR COLON VOID block

    LPAR            shift and go to state 11


state 8

    (3) program -> DECLARATION declaration program .

    $end            reduce using rule 3 (program -> DECLARATION declaration program .)


state 9

    (9) declaration -> NAME LPAR . dargument RPAR COLON types
    (10) declaration -> NAME LPAR . dargument RPAR COLON VOID
    (11) declaration -> NAME LPAR . RPAR COLON types
    (12) declaration -> NAME LPAR . RPAR COLON VOID
    (17) dargument -> . NAME COLON types
    (18) dargument -> . NAME COLON types COMMA dargument

    RPAR            shift and go to state 14
    NAME            shift and go to state 12

    dargument                      shift and go to state 13

state 10

    (4) program -> DEFINITION definition program .

    $end            reduce using rule 4 (program -> DEFINITION definition program .)


state 11

    (13) definition -> NAME LPAR . dargument RPAR COLON types block
    (14) definition -> NAME LPAR . RPAR COLON types block
    (15) definition -> NAME LPAR . RPAR COLON VOID block
    (16) definition -> NAME LPAR . dargument RPAR COLON VOID block
    (17) dargument -> . NAME COLON types
    (18) dargument -> . NAME COLON types COMMA dargument

    RPAR            shift and go to state 16
    NAME            shift and go to state 12

    dargument                      shift and go to state 15

state 12

    (17) dargument -> NAME . COLON types
    (18) dargument -> NAME . COLON types COMMA dargument

    COLON           shift and go to state 17


state 13

    (9) declaration -> NAME LPAR dargument . RPAR COLON types
    (10) declaration -> NAME LPAR dargument . RPAR COLON VOID

    RPAR            shift and go to state 18


state 14

    (11) declaration -> NAME LPAR RPAR . COLON types
    (12) declaration -> NAME LPAR RPAR . COLON VOID

    COLON           shift and go to state 19


state 15

    (13) definition -> NAME LPAR dargument . RPAR COLON types block
    (16) definition -> NAME LPAR dargument . RPAR COLON VOID block

    RPAR            shift and go to state 20


state 16

    (14) definition -> NAME LPAR RPAR . COLON types block
    (15) definition -> NAME LPAR RPAR . COLON VOID block

    COLON           shift and go to state 21


state 17

    (17) dargument -> NAME COLON . types
    (18) dargument -> NAME COLON . types COMMA dargument
    (5) types -> . INT
    (6) types -> . FLOATTYPE
    (7) types -> . BOOL
    (8) types -> . STRINGTYPE

    INT             shift and go to state 23
    FLOATTYPE       shift and go to state 24
    BOOL            shift and go to state 25
    STRINGTYPE      shift and go to state 26

    types                          shift and go to state 22

state 18

    (9) declaration -> NAME LPAR dargument RPAR . COLON types
    (10) declaration -> NAME LPAR dargument RPAR . COLON VOID

    COLON           shift and go to state 27


state 19

    (11) declaration -> NAME LPAR RPAR COLON . types
    (12) declaration -> NAME LPAR RPAR COLON . VOID
    (5) types -> . INT
    (6) types -> . FLOATTYPE
    (7) types -> . BOOL
    (8) types -> . STRINGTYPE

    VOID            shift and go to state 29
    INT             shift and go to state 23
    FLOATTYPE       shift and go to state 24
    BOOL            shift and go to state 25
    STRINGTYPE      shift and go to state 26

    types                          shift and go to state 28

state 20

    (13) definition -> NAME LPAR dargument RPAR . COLON types block
    (16) definition -> NAME LPAR dargument RPAR . COLON VOID block

    COLON           shift and go to state 30


state 21

    (14) definition -> NAME LPAR RPAR COLON . types block
    (15) definition -> NAME LPAR RPAR COLON . VOID block
    (5) types -> . INT
    (6) types -> . FLOATTYPE
    (7) types -> . BOOL
    (8) types -> . STRINGTYPE

    VOID            shift and go to state 32
    INT             shift and go to state 23
    FLOATTYPE       shift and go to state 24
    BOOL            shift and go to state 25
    STRINGTYPE      shift and go to state 26

    types                          shift and go to state 31

state 22

    (17) dargument -> NAME COLON types .
    (18) dargument -> NAME COLON types . COMMA dargument

    RPAR            reduce using rule 17 (dargument -> NAME COLON types .)
    COMMA           shift and go to state 33


state 23

    (5) types -> INT .

    COMMA           reduce using rule 5 (types -> INT .)
    RPAR            reduce using rule 5 (types -> INT .)
    DECLARATION     reduce using rule 5 (types -> INT .)
    DEFINITION      reduce using rule 5 (types -> INT .)
    $end            reduce using rule 5 (types -> INT .)
    LCURLY          reduce using rule 5 (types -> INT .)
    EQUALS          reduce using rule 5 (types -> INT .)


state 24

    (6) types -> FLOATTYPE .

    COMMA           reduce using rule 6 (types -> FLOATTYPE .)
    RPAR            reduce using rule 6 (types -> FLOATTYPE .)
    DECLARATION     reduce using rule 6 (types -> FLOATTYPE .)
    DEFINITION      reduce using rule 6 (types -> FLOATTYPE .)
    $end            reduce using rule 6 (types -> FLOATTYPE .)
    LCURLY          reduce using rule 6 (types -> FLOATTYPE .)
    EQUALS          reduce using rule 6 (types -> FLOATTYPE .)


state 25

    (7) types -> BOOL .

    COMMA           reduce using rule 7 (types -> BOOL .)
    RPAR            reduce using rule 7 (types -> BOOL .)
    DECLARATION     reduce using rule 7 (types -> BOOL .)
    DEFINITION      reduce using rule 7 (types -> BOOL .)
    $end            reduce using rule 7 (types -> BOOL .)
    LCURLY          reduce using rule 7 (types -> BOOL .)
    EQUALS          reduce using rule 7 (types -> BOOL .)


state 26

    (8) types -> STRINGTYPE .

    COMMA           reduce using rule 8 (types -> STRINGTYPE .)
    RPAR            reduce using rule 8 (types -> STRINGTYPE .)
    DECLARATION     reduce using rule 8 (types -> STRINGTYPE .)
    DEFINITION      reduce using rule 8 (types -> STRINGTYPE .)
    $end            reduce using rule 8 (types -> STRINGTYPE .)
    LCURLY          reduce using rule 8 (types -> STRINGTYPE .)
    EQUALS          reduce using rule 8 (types -> STRINGTYPE .)


state 27

    (9) declaration -> NAME LPAR dargument RPAR COLON . types
    (10) declaration -> NAME LPAR dargument RPAR COLON . VOID
    (5) types -> . INT
    (6) types -> . FLOATTYPE
    (7) types -> . BOOL
    (8) types -> . STRINGTYPE

    VOID            shift and go to state 35
    INT             shift and go to state 23
    FLOATTYPE       shift and go to state 24
    BOOL            shift and go to state 25
    STRINGTYPE      shift and go to state 26

    types                          shift and go to state 34

state 28

    (11) declaration -> NAME LPAR RPAR COLON types .

    DECLARATION     reduce using rule 11 (declaration -> NAME LPAR RPAR COLON types .)
    DEFINITION      reduce using rule 11 (declaration -> NAME LPAR RPAR COLON types .)
    $end            reduce using rule 11 (declaration -> NAME LPAR RPAR COLON types .)


state 29

    (12) declaration -> NAME LPAR RPAR COLON VOID .

    DECLARATION     reduce using rule 12 (declaration -> NAME LPAR RPAR COLON VOID .)
    DEFINITION      reduce using rule 12 (declaration -> NAME LPAR RPAR COLON VOID .)
    $end            reduce using rule 12 (declaration -> NAME LPAR RPAR COLON VOID .)


state 30

    (13) definition -> NAME LPAR dargument RPAR COLON . types block
    (16) definition -> NAME LPAR dargument RPAR COLON . VOID block
    (5) types -> . INT
    (6) types -> . FLOATTYPE
    (7) types -> . BOOL
    (8) types -> . STRINGTYPE

    VOID            shift and go to state 37
    INT             shift and go to state 23
    FLOATTYPE       shift and go to state 24
    BOOL            shift and go to state 25
    STRINGTYPE      shift and go to state 26

    types                          shift and go to state 36

state 31

    (14) definition -> NAME LPAR RPAR COLON types . block
    (19) block -> . LCURLY RCURLY
    (20) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 39

    block                          shift and go to state 38

state 32

    (15) definition -> NAME LPAR RPAR COLON VOID . block
    (19) block -> . LCURLY RCURLY
    (20) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 39

    block                          shift and go to state 40

state 33

    (18) dargument -> NAME COLON types COMMA . dargument
    (17) dargument -> . NAME COLON types
    (18) dargument -> . NAME COLON types COMMA dargument

    NAME            shift and go to state 12

    dargument                      shift and go to state 41

state 34

    (9) declaration -> NAME LPAR dargument RPAR COLON types .

    DECLARATION     reduce using rule 9 (declaration -> NAME LPAR dargument RPAR COLON types .)
    DEFINITION      reduce using rule 9 (declaration -> NAME LPAR dargument RPAR COLON types .)
    $end            reduce using rule 9 (declaration -> NAME LPAR dargument RPAR COLON types .)


state 35

    (10) declaration -> NAME LPAR dargument RPAR COLON VOID .

    DECLARATION     reduce using rule 10 (declaration -> NAME LPAR dargument RPAR COLON VOID .)
    DEFINITION      reduce using rule 10 (declaration -> NAME LPAR dargument RPAR COLON VOID .)
    $end            reduce using rule 10 (declaration -> NAME LPAR dargument RPAR COLON VOID .)


state 36

    (13) definition -> NAME LPAR dargument RPAR COLON types . block
    (19) block -> . LCURLY RCURLY
    (20) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 39

    block                          shift and go to state 42

state 37

    (16) definition -> NAME LPAR dargument RPAR COLON VOID . block
    (19) block -> . LCURLY RCURLY
    (20) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 39

    block                          shift and go to state 43

state 38

    (14) definition -> NAME LPAR RPAR COLON types block .

    DECLARATION     reduce using rule 14 (definition -> NAME LPAR RPAR COLON types block .)
    DEFINITION      reduce using rule 14 (definition -> NAME LPAR RPAR COLON types block .)
    $end            reduce using rule 14 (definition -> NAME LPAR RPAR COLON types block .)


state 39

    (19) block -> LCURLY . RCURLY
    (20) block -> LCURLY . block_content RCURLY
    (21) block_content -> . statement
    (22) block_content -> . statement block_content
    (23) statement -> . RETURN SEMICOLON
    (24) statement -> . RETURN expression SEMICOLON
    (25) statement -> . IF expression block
    (26) statement -> . IF expression block ELSE block
    (27) statement -> . WHILE expression block
    (28) statement -> . NAME COLON types EQUALS expression SEMICOLON
    (29) statement -> . NAME COLON types EQUALS QMARK STRING QMARK SEMICOLON
    (30) statement -> . NAME EQUALS expression SEMICOLON
    (31) statement -> . NAME EQUALS QMARK STRING QMARK SEMICOLON
    (32) statement -> . expression
    (33) expression -> . expression SUM expression
    (34) expression -> . expression SUB expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression RESTOF expression
    (38) expression -> . expression SAMEAS expression
    (39) expression -> . expression NEQUAL expression
    (40) expression -> . expression HEQUAL expression
    (41) expression -> . expression LEQUAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression LOWER expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . DIFFER expression
    (49) expression -> . NUMBER
    (50) expression -> . FLOAT
    (51) expression -> . STRING
    (52) expression -> . NAME
    (53) expression -> . NAME LBRACK expression RBRACK
    (54) expression -> . NAME LPAR RPAR LBRACK expression RBRACK
    (55) expression -> . NAME LPAR argument RPAR LBRACK expression RBRACK
    (56) expression -> . NAME LPAR argument RPAR

    RCURLY          shift and go to state 44
    RETURN          shift and go to state 47
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    NAME            shift and go to state 51
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    DIFFER          shift and go to state 55
    NUMBER          shift and go to state 56
    FLOAT           shift and go to state 57
    STRING          shift and go to state 52

    block_content                  shift and go to state 45
    statement                      shift and go to state 46
    expression                     shift and go to state 48

state 40

    (15) definition -> NAME LPAR RPAR COLON VOID block .

    DECLARATION     reduce using rule 15 (definition -> NAME LPAR RPAR COLON VOID block .)
    DEFINITION      reduce using rule 15 (definition -> NAME LPAR RPAR COLON VOID block .)
    $end            reduce using rule 15 (definition -> NAME LPAR RPAR COLON VOID block .)


state 41

    (18) dargument -> NAME COLON types COMMA dargument .

    RPAR            reduce using rule 18 (dargument -> NAME COLON types COMMA dargument .)


state 42

    (13) definition -> NAME LPAR dargument RPAR COLON types block .

    DECLARATION     reduce using rule 13 (definition -> NAME LPAR dargument RPAR COLON types block .)
    DEFINITION      reduce using rule 13 (definition -> NAME LPAR dargument RPAR COLON types block .)
    $end            reduce using rule 13 (definition -> NAME LPAR dargument RPAR COLON types block .)


state 43

    (16) definition -> NAME LPAR dargument RPAR COLON VOID block .

    DECLARATION     reduce using rule 16 (definition -> NAME LPAR dargument RPAR COLON VOID block .)
    DEFINITION      reduce using rule 16 (definition -> NAME LPAR dargument RPAR COLON VOID block .)
    $end            reduce using rule 16 (definition -> NAME LPAR dargument RPAR COLON VOID block .)


state 44

    (19) block -> LCURLY RCURLY .

    DECLARATION     reduce using rule 19 (block -> LCURLY RCURLY .)
    DEFINITION      reduce using rule 19 (block -> LCURLY RCURLY .)
    $end            reduce using rule 19 (block -> LCURLY RCURLY .)
    ELSE            reduce using rule 19 (block -> LCURLY RCURLY .)
    RETURN          reduce using rule 19 (block -> LCURLY RCURLY .)
    IF              reduce using rule 19 (block -> LCURLY RCURLY .)
    WHILE           reduce using rule 19 (block -> LCURLY RCURLY .)
    NAME            reduce using rule 19 (block -> LCURLY RCURLY .)
    TRUE            reduce using rule 19 (block -> LCURLY RCURLY .)
    FALSE           reduce using rule 19 (block -> LCURLY RCURLY .)
    DIFFER          reduce using rule 19 (block -> LCURLY RCURLY .)
    NUMBER          reduce using rule 19 (block -> LCURLY RCURLY .)
    FLOAT           reduce using rule 19 (block -> LCURLY RCURLY .)
    STRING          reduce using rule 19 (block -> LCURLY RCURLY .)
    RCURLY          reduce using rule 19 (block -> LCURLY RCURLY .)


state 45

    (20) block -> LCURLY block_content . RCURLY

    RCURLY          shift and go to state 58


state 46

    (21) block_content -> statement .
    (22) block_content -> statement . block_content
    (21) block_content -> . statement
    (22) block_content -> . statement block_content
    (23) statement -> . RETURN SEMICOLON
    (24) statement -> . RETURN expression SEMICOLON
    (25) statement -> . IF expression block
    (26) statement -> . IF expression block ELSE block
    (27) statement -> . WHILE expression block
    (28) statement -> . NAME COLON types EQUALS expression SEMICOLON
    (29) statement -> . NAME COLON types EQUALS QMARK STRING QMARK SEMICOLON
    (30) statement -> . NAME EQUALS expression SEMICOLON
    (31) statement -> . NAME EQUALS QMARK STRING QMARK SEMICOLON
    (32) statement -> . expression
    (33) expression -> . expression SUM expression
    (34) expression -> . expression SUB expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression RESTOF expression
    (38) expression -> . expression SAMEAS expression
    (39) expression -> . expression NEQUAL expression
    (40) expression -> . expression HEQUAL expression
    (41) expression -> . expression LEQUAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression LOWER expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . DIFFER expression
    (49) expression -> . NUMBER
    (50) expression -> . FLOAT
    (51) expression -> . STRING
    (52) expression -> . NAME
    (53) expression -> . NAME LBRACK expression RBRACK
    (54) expression -> . NAME LPAR RPAR LBRACK expression RBRACK
    (55) expression -> . NAME LPAR argument RPAR LBRACK expression RBRACK
    (56) expression -> . NAME LPAR argument RPAR

    RCURLY          reduce using rule 21 (block_content -> statement .)
    RETURN          shift and go to state 47
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    NAME            shift and go to state 51
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    DIFFER          shift and go to state 55
    NUMBER          shift and go to state 56
    FLOAT           shift and go to state 57
    STRING          shift and go to state 52

    statement                      shift and go to state 46
    block_content                  shift and go to state 59
    expression                     shift and go to state 48

state 47

    (23) statement -> RETURN . SEMICOLON
    (24) statement -> RETURN . expression SEMICOLON
    (33) expression -> . expression SUM expression
    (34) expression -> . expression SUB expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression RESTOF expression
    (38) expression -> . expression SAMEAS expression
    (39) expression -> . expression NEQUAL expression
    (40) expression -> . expression HEQUAL expression
    (41) expression -> . expression LEQUAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression LOWER expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . DIFFER expression
    (49) expression -> . NUMBER
    (50) expression -> . FLOAT
    (51) expression -> . STRING
    (52) expression -> . NAME
    (53) expression -> . NAME LBRACK expression RBRACK
    (54) expression -> . NAME LPAR RPAR LBRACK expression RBRACK
    (55) expression -> . NAME LPAR argument RPAR LBRACK expression RBRACK
    (56) expression -> . NAME LPAR argument RPAR

    SEMICOLON       shift and go to state 60
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    DIFFER          shift and go to state 55
    NUMBER          shift and go to state 56
    FLOAT           shift and go to state 57
    STRING          shift and go to state 52
    NAME            shift and go to state 62

    expression                     shift and go to state 61

state 48

    (32) statement -> expression .
    (33) expression -> expression . SUM expression
    (34) expression -> expression . SUB expression
    (35) expression -> expression . MULTIPLY expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . RESTOF expression
    (38) expression -> expression . SAMEAS expression
    (39) expression -> expression . NEQUAL expression
    (40) expression -> expression . HEQUAL expression
    (41) expression -> expression . LEQUAL expression
    (42) expression -> expression . HIGHER expression
    (43) expression -> expression . LOWER expression
    (44) expression -> expression . AND expression
    (45) expression -> expression . OR expression

    RETURN          reduce using rule 32 (statement -> expression .)
    IF              reduce using rule 32 (statement -> expression .)
    WHILE           reduce using rule 32 (statement -> expression .)
    NAME            reduce using rule 32 (statement -> expression .)
    TRUE            reduce using rule 32 (statement -> expression .)
    FALSE           reduce using rule 32 (statement -> expression .)
    DIFFER          reduce using rule 32 (statement -> expression .)
    NUMBER          reduce using rule 32 (statement -> expression .)
    FLOAT           reduce using rule 32 (statement -> expression .)
    STRING          reduce using rule 32 (statement -> expression .)
